<resources>
    <string name="app_name">Color Caller Screen : Phone Dialer</string>
    <string name="_abstract">Abstract</string>
    <string name="accept">Accept</string>
    <string name="accept_key">Accept</string>
    <string name="accept_txt">Set your voice command to\n\n Accept Incoming Calls</string>
    <string name="access_call_log">To Manage Call History</string>
    <string name="add_calculator_shortcut_to_home">Add Calculator shortcut to Home</string>
    <string name="add_call">Add Call</string>
    <string name="add_contact">Add Contact</string>
    <string name="add_dialer_shortcut_to_home">Add Phone shortcut to Home</string>
    <string name="add_speech_shortcut_to_home">Add Speech Note shortcut to Home</string>
    <string name="add_words_for">Add Words For</string>
    <string name="add_your_word">+ Add Your Word</string>
    <string name="added_to_block_list">Added to block list</string>
    <string name="allow_bolo_default">Allow Vani Dialer to make and manage phone calls?</string>
    <string name="allow_pop_up_window">Allow Pop-up Window</string>
    <string name="already_applied">Already applied</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="answer_call_phone">Answer Call Phone</string>
    <string name="applied">Applied</string>
    <string name="apply">Apply</string>
    <string name="apply_theme_to_selected_contact_s">Apply Theme to Selected Contact(s)</string>
    <string name="auto_reply">Auto Reply</string>
    <string name="auto_reply_key">SMS</string>
    <string name="auto_reply_txt">I\'ll call you later</string>
    <string name="auto_run">Please allow Autostart to Vani Dialer.</string>
    <string name="automatic_call_record">Record Automatic</string>
    <string name="block">Block</string>
    <string name="block_info">You will no longer receive calls\nfrom this person</string>
    <string name="block_key">Block</string>
    <string name="block_list_empty">Block list empty</string>
    <string name="block_this_caller">Block this Caller?</string>
    <string name="blocked_call">Blocked</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="by_continue">By continuing, you agree to terms of service and privacy policy</string>
    <string name="call">Call</string>
    <string name="call_block">Caller ID</string>
    <string name="call_block_list">Call Block List</string>
    <string name="call_log_premission_required">Call Log Permission Required</string>
    <string name="call_record">Record</string>
    <string name="call_recording">Call Recording</string>
    <string name="call_waiting">Call Waiting</string>
    <string name="caller_id_setting">Advanced Caller ID settings</string>
    <string name="caller_id_text">By clicking Continue , you give Vani Dialer permission to identify incoming and outgoing call. Put a name to unknown numbers, and avoid spam callers. Find more information in the &lt;a href=http://juridical.calldorado.com/privacy-policy/&gt;Privacy Policy&lt;/a&gt; &amp; &lt;a href=http://legal.calldorado.com/usage-and-privacy-terms/&gt;EULA&lt;/a&gt;</string>
    <string name="caller_name">Caller name</string>
    <string name="caller_name_on_msg">Make sure the volume of device media is high</string>
    <string name="calling">Calling</string>
    <string name="can_not_save_empty">Can not save empty</string>
    <string name="cancel">Cancel</string>
    <string name="change_call_screen_theme">Change Call Screen Theme</string>
    <string name="check">Check</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="choose_sim_card">Choose SIM Card</string>
    <string name="clear">Clear</string>
    <string name="clear_history">Are you sure you want to clear all history ?</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close_button">Close Button</string>
    <string name="conference_call">Conference Call</string>
    <string name="connecting">Connecting...</string>
    <string name="contact_deleted">Are you sure you want to delete this contact.</string>
    <string name="contact_deleteds">Are you sure you want to delete this selected contacts.</string>
    <string name="continue_txt">Continue</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="custom_theme">Custom</string>
    <string name="customize_words">Customize Words</string>
    <string name="days_ago">days ago</string>
    <string name="decline">Decline</string>
    <string name="decline_key">Decline</string>
    <string name="decline_text">Now set your voice command to\n\nDecline Incoming Calls</string>
    <string name="default_notification_channel_id">FCM</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="device_settings">Device Settings</string>
    <string name="dialer">Phone</string>
    <string name="dialing">Dialing...</string>
    <string name="disconnecting">Disconnecting...</string>
    <string name="edit">Edit</string>
    <string name="enable">Enable</string>
    <string name="enable_accessibility">Enable Accessibility</string>
    <string name="enable_accessibility_desc">To personalize user experience</string>
    <string name="enable_autostart">Enable Autostart</string>
    <string name="enable_bolo">Enable Vani Dialer</string>
    <string name="enable_notification_access_to_answer_call">Enable Notification Access to answer call</string>
    <string name="enabled">Enabled</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="for_any_issues_refer_faq_section">For any issues, refer FAQ section</string>
    <string name="free_caller_id">Allow Caller ID by Vani Dialer</string>
    <string name="give_permission">Give Permission</string>
    <string name="got_it">GOT IT</string>
    <string name="headset">Phone</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history_removed">Are you sure you want to removed this call log?</string>
    <string name="hold">Hold</string>
    <string name="how_to_prevent_being_killed">How to Prevent Being Killed</string>
    <string name="hr_ago">hr ago</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="it_is_used_to_show_bolo_screen">It is used to show Vani Dialer Screen</string>
    <string name="item_view_role_description">Tab</string>
    <string name="just_add_photo">Just Add\nYour Photo</string>
    <string name="later">Later</string>
    <string name="launch_mic">Launch Mic</string>
    <string name="led_flash">Led Flash</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="list_call_recording">List Of Call Recording</string>
    <string name="listening">Listening...</string>
    <string name="live_wallpapers">Live\nWallpaper</string>
    <string name="make_sure_internet">Make sure your internet is working..</string>
    <string name="merge_call">Merge Call</string>
    <string name="message">Message</string>
    <string name="min_ago">min ago</string>
    <string name="missed_call">Missed Call</string>
    <string name="month">Month</string>
    <string name="months">Months</string>
    <string name="mute">Silent</string>
    <string name="mute_key">Silent</string>
    <string name="my_recordings">My Recordings</string>
    <string name="name">Name</string>
    <string name="next">NEXT</string>
    <string name="no">No</string>
    <string name="no_internet">No Internet</string>
    <string name="no_internet_please">No Internet connection. Please check your network settings.</string>
    <string name="ok">Ok</string>
    <string name="ok_one_last_time">OK! one last time</string>
    <string name="on_going_call">Ongoing Call</string>
    <string name="outgoing_call">Outgoing Call</string>
    <string name="outgoingcall_toast_message">Long Press to make Outgoing Calls by Voice</string>
    <string name="overlay_msg">Please allow drawing over the app to Vani Dialer.</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="permission_center">Permission Center</string>
    <string name="permission_info">Grant the permission or adjust settings for Vani Dialer to work correctly.</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="please_allow_notification_access">Please allow notification access to Vani Dialer.</string>
    <string name="please_allow_the_required_permission_to_start_caller_theme">Please allow the required permission to start Vani Dialer</string>
    <string name="please_be_loud">Please be loud and clear</string>
    <string name="please_enable">Please enable notification access to answer calls</string>
    <string name="please_give_req_permission">Please give us the missing permission</string>
    <string name="please_go_to_your_device_settings_and_swtich_those_permission_on">Please go to your device settings and swtich those permission on</string>
    <string name="preparing">Preparing....</string>
    <string name="press_again_back">Press again for back</string>
    <string name="prevent_instructuon">1. Tap the Menu button of your device to enter apps history. \n 2. Drag down the Vani Dialer and release, make sure the lock icon on the top right appears.</string>
    <string name="random_theme">Random Themes</string>
    <string name="random_theme_toast">Experience new theme on every call with random themes turned on</string>
    <string name="read_call_log">Read Call Log</string>
    <string name="read_contact">Read Contact</string>
    <string name="read_phone_state">Read Phone State</string>
    <string name="record_audio">Record Audio</string>
    <string name="record_audio_desc">To receive call with your voice</string>
    <string name="recording_list_empty">No Recording Found</string>
    <string name="recording_tandc_msg">I agree to the \'terms and conditions\' and \'privacy policy\' (available at callertheme.vaniassistant.com) related to the use of the Recording Feature. I confirm that in my use of this feature I comply with relevant laws in my jurisdiction, and obtain any required consents.</string>
    <string name="rejected_call">Rejected</string>
    <string name="remove">Remove</string>
    <string name="remove_favorite">Are you sure you want to remove this contacts from favorite.</string>
    <string name="remove_to_block_list">Removed from block list</string>
    <string name="ringing">Ringing...</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_contacts">Search Contacts</string>
    <string name="set">Set</string>
    <string name="speaker">Speaker</string>
    <string name="we_need_your_app_permission">We need your App permission</string>
</resources>