<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="@string/block_this_caller"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/sofia_pro_regular"
            android:text="@string/block_info"
            android:textAlignment="center"
            android:textColor="@color/textColor2"
            android:textSize="@dimen/_13ssp"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:background="#d9dbe9" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:fontFamily="@font/sofia_pro_regular"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/cancel"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14ssp" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="#d9dbe9" />

            <TextView
                android:id="@+id/block"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.5"
                android:fontFamily="@font/sofia_pro_regular"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/block"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14ssp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
